# M0

./: .gitignore
MSPM0G3507_VSCODE/: .env  .gitignore  CMakeLists.txt  CMakePresets.json  empty.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
MSPM0G3507_VSCODE/include/core/ti/devices/: DeviceFamily.h
MSPM0G3507_VSCODE/include/core/ti/devices/msp/: msp.h
MSPM0G3507_VSCODE/include/core/ti/devices/msp/m0p/: mspm0g350x.h
MSPM0G3507_VSCODE/include/core/ti/devices/msp/peripherals/: hw_adc12.h  hw_aes.h  hw_aesadv.h  hw_btimer.h  hw_comp.h  hw_crc.h  hw_crcp.h  hw_dac12.h  hw_dma.h  hw_flashctl.h  hw_gpio.h  hw_gptimer.h  hw_i2c.h  hw_i2s.h  hw_iomux.h  hw_keystorectl.h  hw_lcd.h  hw_lfss.h  hw_mathacl.h  hw_mcan.h  hw_npu.h  hw_oa.h  hw_rtc.h  hw_spgss.h  hw_spi.h  hw_trng.h  hw_uart.h  hw_unicomm.h  hw_unicommi2cc.h  hw_unicommi2ct.h  hw_unicommspi.h  hw_unicommuart.h  hw_usb.h  hw_vref.h  hw_wuc.h  hw_wwdt.h
MSPM0G3507_VSCODE/include/core/ti/devices/msp/peripherals/m0p/: hw_cpuss.h  hw_debugss.h  hw_factoryregion.h  hw_sysctl.h
MSPM0G3507_VSCODE/include/core/ti/devices/msp/peripherals/m0p/sysctl/: hw_sysctl_mspm0g1x0x_g3x0x.h
MSPM0G3507_VSCODE/include/core/ti/driverlib/: dl_adc12.h  dl_aes.h  dl_common.h  dl_comp.h  dl_crc.h  dl_crcp.h  dl_dac12.h  dl_dma.h  dl_flashctl.h  dl_gpamp.h  dl_gpio.h  dl_i2c.h  dl_i2s.h  dl_iwdt.h  dl_keystorectl.h  dl_lcd.h  dl_lfss.h  dl_mathacl.h  dl_mcan.h  dl_npu.h  dl_opa.h  dl_rtc.h  dl_rtc_a.h  dl_rtc_b.h  dl_rtc_common.h  dl_scratchpad.h  dl_spgss.h  dl_spi.h  dl_tamperio.h  dl_timer.h  dl_timera.h  dl_timerb.h  dl_timerg.h  dl_trng.h  dl_uart.h  dl_uart_extend.h  dl_uart_main.h  dl_unicomm.h  dl_unicommi2cc.h  dl_unicommi2ct.h  (+5 more)
MSPM0G3507_VSCODE/include/core/ti/driverlib/m0p/: dl_core.h  dl_factoryregion.h  dl_interrupt.h  dl_sysctl.h  dl_systick.h
MSPM0G3507_VSCODE/include/core/ti/driverlib/m0p/sysctl/: dl_sysctl_mspm0g1x0x_g3x0x.h
MSPM0G3507_VSCODE/include/core/ti/drivers/: ADC.h  GPIO.h  I2C.h  I2CTarget.h  SPI.h  UART.h
MSPM0G3507_VSCODE/include/core/ti/drivers/adc/: ADCMSPM0.h
MSPM0G3507_VSCODE/include/core/ti/drivers/dma/: DMAMSPM0.h
MSPM0G3507_VSCODE/include/core/ti/drivers/dpl/: ClockP.h  DebugP.h  HwiP.h  MutexP.h  SemaphoreBinaryP.h  SemaphoreP.h  SwiP.h  SystemP.h  TaskP.h
MSPM0G3507_VSCODE/include/core/ti/drivers/gpio/: GPIOMSPM0.h
MSPM0G3507_VSCODE/include/core/ti/drivers/i2c/: I2CMSPM0.h  I2CSupport.h
MSPM0G3507_VSCODE/include/core/ti/drivers/i2ctarget/: I2CTargetMSPM0.h
MSPM0G3507_VSCODE/include/core/ti/drivers/spi/: SPIMSPM0.h
MSPM0G3507_VSCODE/include/core/ti/drivers/uart/: UARTMSPM0.h  UARTSupportMSPM0.h
MSPM0G3507_VSCODE/include/core/ti/drivers/utils/: List.h  RingBuf.h  StructRingBuf.h
MSPM0G3507_VSCODE/include/core/zf/: zf_common_clock.h  zf_common_debug.h  zf_common_fifo.h  zf_common_font.h  zf_common_function.h  zf_common_headfile.h  zf_common_interrupt.h  zf_common_typedef.h  zf_device_absolute_encoder.h  zf_device_config.h  zf_device_key.h  zf_device_oled.h  zf_device_type.h  zf_device_wifi_spi.h  zf_device_wifi_uart.h  zf_device_wireless_uart.h  zf_driver_adc.h  zf_driver_delay.h  zf_driver_exti.h  zf_driver_flash.h  zf_driver_gpio.h  zf_driver_pit.h  zf_driver_pwm.h  zf_driver_soft_iic.h  zf_driver_spi.h  zf_driver_timer.h  zf_driver_uart.h
MSPM0G3507_VSCODE/include/rtos/: FreeRTOSConfig.h
MSPM0G3507_VSCODE/linker/: .clangd  CFG.cfg  mspm0g3507.ld
MSPM0G3507_VSCODE/source/core/ti/driverlib/: dl_adc12.c  dl_common.c  dl_crc.c  dl_crcp.c  dl_dac12.c  dl_dma.c  dl_flashctl.c  dl_gpamp.c  dl_i2c.c  dl_i2s.c  dl_iwdt.c  dl_keystorectl.c  dl_lcd.c  dl_lfss.c  dl_mathacl.c  dl_mcan.c  dl_npu.c  dl_opa.c  dl_rtc_a.c  dl_rtc_b.c  dl_rtc_common.c  dl_scratchpad.c  dl_spgss.c  dl_spi.c  dl_tamperio.c  dl_timer.c  dl_timera.c  dl_timerb.c  dl_timerg.c  dl_trng.c  dl_uart.c  dl_unicomm.c  dl_unicommi2cc.c  dl_unicommi2ct.c  dl_unicommspi.c  dl_unicommuart.c  dl_vref.c  dl_wwdt.c
MSPM0G3507_VSCODE/source/core/ti/driverlib/m0p/: dl_factoryregion.c  dl_interrupt.c
MSPM0G3507_VSCODE/source/core/ti/driverlib/m0p/sysctl/: dl_sysctl_mspm0g1x0x_g3x0x.c
MSPM0G3507_VSCODE/source/core/ti/drivers/: ADC.c  GPIO.c  I2C.c  I2CTarget.c  SPI.c  UART.c
MSPM0G3507_VSCODE/source/core/ti/drivers/adc/: ADCMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/dma/: DMAMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/gpio/: GPIOMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/i2c/: I2CMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/i2ctarget/: I2CTargetMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/spi/: SPIMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/uart/: UARTMSPM0.c
MSPM0G3507_VSCODE/source/core/ti/drivers/utils/: List.c  RingBuf.c  StructRingBuf.c
MSPM0G3507_VSCODE/source/core/zf/: zf_common_clock.c  zf_common_debug.c  zf_common_fifo.c  zf_common_font.c  zf_common_function.c  zf_common_interrupt.c  zf_device_absolute_encoder.c  zf_device_key.c  zf_device_oled.c  zf_device_type.c  zf_device_wifi_spi.c  zf_device_wifi_uart.c  zf_device_wireless_uart.c  zf_driver_adc.c  zf_driver_delay.c  zf_driver_exti.c  zf_driver_flash.c  zf_driver_gpio.c  zf_driver_pit.c  zf_driver_pwm.c  zf_driver_soft_iic.c  zf_driver_spi.c  zf_driver_timer.c  zf_driver_uart.c
MSPM0G3507_VSCODE/user/encoder/: encoder.c  encoder.h
MSPM0G3507_VSCODE/user/imu601/: imu601.c  imu601.h
MSPM0G3507_VSCODE/user/line_sensor/: line_sensor.c  line_sensor.h
MSPM0G3507_VSCODE/user/main/: main.c
MSPM0G3507_VSCODE/user/motor/: motor.c  motor.h
MSPM0G3507_VSCODE/user/oled/: oled.c  oled.h
MSPM0G3507_VSCODE/user/rtos/: freertos_hooks.c
MSPM0G3507_VSCODE/user/uart/: uart.c  uart.h
